# napari-copick

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml  test_and_deploy.yml
src/napari_copick/: __init__.py  _widget.py  async_loaders.py  cli_widget.py  config_manager.py  copick_plugin.py  data_loader.py  dialogs.py  gallery_widget.py  info_widget.py  napari.yaml  point_comparison_widget.py  save_manager.py  save_utils.py  tree_widget.py  widget.py
src/napari_copick/_tests/: test_widget.py
src/napari_copick/cli/: run.py
